[tool.poetry]
name = "ad-library"
version = "0.1.0"
description = ""
authors = ["angela <angela52799@gmail.com>"]
readme = "README.md"
packages = [{include = "ad_library"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
iso3166 = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
